<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="MaquinaSolda" Id="{25161b69-cf41-45bf-a048-63e6b57eeb6a}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MaquinaSolda
VAR

(*=====================		MÁQUINA DE SOLDA		======================*)	

MaquinaSolda_Receita 		: BYTE;
PassoMaquinaSoldaManual		: INT;
PassoMaquinaSoldaAuto		: INT;
DelayErroMaquinaSoldaManual	: TON;
DelayErroMaquinaSoldaAuto	: TON;
DelayPosicaoCilindro		: TON;

(*========================================================================*)

END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*===========		MÁQUINA DE SOLDA - DEFINIÇÃO DE RECEITA		==========*)

	MaquinaSolda_Receita := INT_TO_BYTE(32-1);

	OutMaquinaSolda_Receita_Bit1 := MaquinaSolda_Receita.0;
	OutMaquinaSolda_Receita_Bit2 := MaquinaSolda_Receita.1;
	OutMaquinaSolda_Receita_Bit3 := MaquinaSolda_Receita.2;
	OutMaquinaSolda_Receita_Bit4 := MaquinaSolda_Receita.3;
	OutMaquinaSolda_Receita_Bit5 := MaquinaSolda_Receita.4;
	
(*=================		MÁQUINA DE SOLDA - SAÍDAS		==================*)

	OutMaquinaSolda_BtReset := IhmBt_MaquinaSolda_Reset;

IF(MaquinaModoManual) THEN
	OutMaquinaSolda_BtStart := LigarMaquinaSoldaManual;
ELSIF (MaquinaModoAuto) THEN
	OutMaquinaSolda_BtStart := LigarMaquinaSoldaAuto;
ELSE
	OutMaquinaSolda_BtStart := FALSE;
END_IF

(*=========================		Modo Manual		==========================*)
												
//Condição de Bloqueio da Máquina de Estados - Máquina de Solda Modo Auto
IF (Alarmes.AlarmeGrave
	//OR Alarmes.AlarmeMedio
	//OR Alarmes.AlarmeLeve
	OR NOT MaquinaLigada
	OR NOT MaquinaModoManual
	) THEN
	PassoMaquinaSoldaManual := 1000;
	LigarMaquinaSoldaManual := FALSE;
	DelayErroMaquinaSoldaManual(IN := FALSE);
END_IF

CASE PassoMaquinaSoldaManual OF
	
	//Passo 0 - Inicialização	
	0: PassoMaquinaSoldaManual := 10;
	
	//Passo 10 - Condição para Iniciar a Rotina da Máquina de Solda
	10: IF  (IhmBt_MaquinaSolda_Start) THEN
			PassoMaquinaSoldaManual := 20;
		END_IF

	//Passo 20 - Ligar Máquina de Solda
	20: LigarMaquinaSoldaManual := TRUE;
		DelayErroMaquinaSoldaManual(IN := TRUE, PT := T#4S);
		IF (DelayErroMaquinaSoldaManual.Q) THEN
			DelayErroMaquinaSoldaManual(IN := FALSE);
			LigarMaquinaSoldaManual := FALSE;
			PassoMaquinaSoldaManual := 40;	
		ELSIF (InMaquinaSolda_FK) THEN
			LigarMaquinaSoldaManual := FALSE;
			PassoMaquinaSoldaManual := 30;
		END_IF
		
	//Passo 30 - Fim do Processo de Solda
	30:	DelayErroMaquinaSoldaManual(IN := TRUE, PT := T#4S);
		IF (DelayErroMaquinaSoldaManual.Q) THEN
			DelayErroMaquinaSoldaManual(IN := FALSE);
			LigarMaquinaSoldaManual := FALSE;
			PassoMaquinaSoldaManual := 40;	
		ELSIF (NOT InMaquinaSolda_FK) THEN
			LigarMaquinaSoldaManual := FALSE;
			PassoMaquinaSoldaManual := 40;
		END_IF

	//Passo 40 - Sinalização da Conclusão da Rotina
	40: IhmBt_MaquinaSolda_Start := FALSE;
		PassoMaquinaSoldaManual := 1000;
	
	//Passo 1000 - Finalização
	1000: 	IhmBt_MaquinaSolda_Start := FALSE;
			PassoMaquinaSoldaManual := 0;
	
END_CASE

(*======================		Modo Automático		======================*)

//Condição de Bloqueio da Máquina de Estados - Máquina de Solda Modo Auto
IF (Alarmes.AlarmeGrave
	//OR Alarmes.AlarmeMedio
	//OR Alarmes.AlarmeLeve
	OR NOT MaquinaLigada
	OR NOT MaquinaModoAuto
	) THEN
	PassoMaquinaSoldaAuto := 1000;
	Flag_MaquinaSolda_ServosXY := FALSE;
	LigarMaquinaSoldaAuto := FALSE;
	DelayPosicaoCilindro(IN := FALSE);
END_IF

CASE PassoMaquinaSoldaAuto OF
	
	//Passo 0 - Inicialização	
	0: PassoMaquinaSoldaAuto := 10;
	
	//Passo 10 - Condição para Iniciar a Rotina da Máquina de Solda
	10: IF  (Flag_ServosXY_MaquinaSolda) THEN
			Flag_ServosXY_MaquinaSolda := FALSE;
			PassoMaquinaSoldaAuto := 20;
		END_IF
		
	//Passo 20 - Avançar Cilindro Principal
	20: LigarValvulaY6 := TRUE;
		DelayPosicaoCilindro(IN := TRUE, PT := T#2S);
		IF (DelayPosicaoCilindro.Q) THEN
			DelayPosicaoCilindro(IN := FALSE);
			PassoMaquinaSoldaAuto := 30;
		END_IF
				
	//Passo 30 - Verificar Posição do Cilindro
	30: IF (ReguaPotenciometricaSinal < 29000 AND ReguaPotenciometricaSinal > 28000) THEN
			PassoMaquinaSoldaAuto := 40;
		ELSE
			PassoMaquinaSoldaAuto := 60;
		END_IF

	//Passo 40 - Ligar Máquina de Solda
	40: LigarMaquinaSoldaAuto := TRUE;
		DelayErroMaquinaSoldaAuto(IN := TRUE, PT := T#4S);
		IF (DelayErroMaquinaSoldaAuto.Q) THEN
			DelayErroMaquinaSoldaAuto(IN := FALSE);
			LigarMaquinaSoldaAuto := FALSE;
			PassoMaquinaSoldaAuto := 60;	
		ELSIF (InMaquinaSolda_FK) THEN
			LigarMaquinaSoldaAuto := FALSE;
			PassoMaquinaSoldaAuto := 50;
		END_IF
		
	//Passo 50 - Fim do Processo de Solda
	50:	DelayErroMaquinaSoldaAuto(IN := TRUE, PT := T#2S);
		IF (DelayErroMaquinaSoldaAuto.Q) THEN
			DelayErroMaquinaSoldaAuto(IN := FALSE);
			LigarMaquinaSoldaAuto := FALSE;
			PassoMaquinaSoldaAuto := 60;	
		ELSIF (NOT InMaquinaSolda_FK) THEN
			LigarMaquinaSoldaAuto := FALSE;
			PassoMaquinaSoldaAuto := 50;
		END_IF

	//Passo 60 - Recuar Cilindro Principal
	60: LigarValvulaY6 := FALSE;
		IF (ReguaPotenciometricaSinal > 500 AND ReguaPotenciometricaSinal < 20000) THEN
			PassoMaquinaSoldaAuto := 70;
		END_IF
		
	//Passo 70 - Sinalização da Conclusão da Rotina
	70: Flag_MaquinaSolda_ServosXY := TRUE;
		PassoMaquinaSoldaAuto := 1000;
	
	//Passo 1000 - Finalização
	1000: PassoMaquinaSoldaAuto := 0;
	
END_CASE

(*========================================================================*)]]></ST>
    </Implementation>
    <LineIds Name="MaquinaSolda">
      <LineId Id="6" Count="0" />
      <LineId Id="169" Count="0" />
      <LineId Id="168" Count="0" />
      <LineId Id="162" Count="4" />
      <LineId Id="161" Count="0" />
      <LineId Id="414" Count="1" />
      <LineId Id="151" Count="0" />
      <LineId Id="160" Count="0" />
      <LineId Id="142" Count="0" />
      <LineId Id="420" Count="0" />
      <LineId Id="575" Count="1" />
      <LineId Id="341" Count="0" />
      <LineId Id="578" Count="2" />
      <LineId Id="481" Count="1" />
      <LineId Id="426" Count="0" />
      <LineId Id="490" Count="7" />
      <LineId Id="499" Count="0" />
      <LineId Id="566" Count="0" />
      <LineId Id="501" Count="7" />
      <LineId Id="565" Count="0" />
      <LineId Id="511" Count="1" />
      <LineId Id="528" Count="21" />
      <LineId Id="569" Count="3" />
      <LineId Id="550" Count="0" />
      <LineId Id="561" Count="2" />
      <LineId Id="574" Count="0" />
      <LineId Id="564" Count="0" />
      <LineId Id="478" Count="0" />
      <LineId Id="181" Count="0" />
      <LineId Id="195" Count="7" />
      <LineId Id="204" Count="3" />
      <LineId Id="422" Count="0" />
      <LineId Id="208" Count="11" />
      <LineId Id="353" Count="2" />
      <LineId Id="367" Count="1" />
      <LineId Id="401" Count="0" />
      <LineId Id="369" Count="0" />
      <LineId Id="366" Count="0" />
      <LineId Id="358" Count="0" />
      <LineId Id="360" Count="0" />
      <LineId Id="365" Count="0" />
      <LineId Id="373" Count="2" />
      <LineId Id="371" Count="0" />
      <LineId Id="242" Count="2" />
      <LineId Id="376" Count="1" />
      <LineId Id="383" Count="0" />
      <LineId Id="378" Count="4" />
      <LineId Id="330" Count="0" />
      <LineId Id="283" Count="0" />
      <LineId Id="285" Count="0" />
      <LineId Id="387" Count="7" />
      <LineId Id="320" Count="0" />
      <LineId Id="288" Count="0" />
      <LineId Id="290" Count="1" />
      <LineId Id="399" Count="0" />
      <LineId Id="294" Count="0" />
      <LineId Id="395" Count="0" />
      <LineId Id="400" Count="0" />
      <LineId Id="397" Count="1" />
      <LineId Id="396" Count="0" />
      <LineId Id="293" Count="0" />
      <LineId Id="265" Count="4" />
      <LineId Id="180" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>